#26758 use scramnbled version of binaries

--- a/api.xml/build.xml
+++ b/api.xml/build.xml
@@ -17,15 +17,11 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xml_root" location=".."/>
 
     <property name="nbroot" location="${xml_root}/.."/>
-    <property name="binroot" location="${nbroot}/../nbextra"/>
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
-
-    <property name="xml-apis" location="${binroot}/core/release/lib/ext/xml-apis.jar" />
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
-    <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
@@ -49,7 +45,9 @@ Microsystems, Inc. All Rights Reserved.
                 <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
+                <fileset dir="${nbroot}/core/external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
             </classpath>
         </javac>
     </target>
@@ -149,7 +147,9 @@ Microsystems, Inc. All Rights Reserved.
                 <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
+                <fileset dir="${nbroot}/core/external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
             </classpath>                       
             
             <link href="${jdk-docs-location}"
