--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -21,13 +21,11 @@ Microsystems, Inc. All Rights Reserved.
     <property name="core_root" location="${xml_root}/core"/>
 
     <property name="nbroot" location="${xml_root}/.."/>
-    <property name="binroot" location="${nbroot}/../nbextra"/>
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
-    <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
@@ -57,9 +55,9 @@ Microsystems, Inc. All Rights Reserved.
                 </fileset>
                 <pathelement location="${nbroot}/editor/netbeans/modules/ext/nb-editor.jar"/>
                 <pathelement location="${nbroot}/editor/netbeans/modules/editor.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/dom.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/sax.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>  <!-- same as above -->
+                <fileset dir="${nbroot}/core/external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${core_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
