--- a/xsl/build.xml
+++ b/xsl/build.xml
@@ -21,16 +21,12 @@ Microsystems, Inc. All Rights Reserved.
     <property name="core_root" location="${xml_root}/core"/>
 
     <property name="nbroot" location="${xml_root}/.."/>
-    <property name="binroot" location="${nbroot}/../nbextra"/>
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
     <property name="libs_root" location="${nbroot}/libs"/>
-
-    <property name="xml-apis" location="${binroot}/core/release/lib/ext/xml-apis.jar" />
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
     <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
-    <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
 
     <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext_root}/nbantext.jar"/>
@@ -58,14 +54,17 @@ Microsystems, Inc. All Rights Reserved.
                 <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
+                <fileset dir="${nbroot}/core/external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
                 <pathelement location="${core_root}/src/"/>
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
                 <!--Servlet API-->
-                <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar" />
-                <!--Xalan-->
-                <pathelement location="${binroot}/${libs.xalan.jar.path}" />
+                <pathelement location="${nbroot}/httpserver/external/servlet-2.2.jar"/>
+                <fileset dir="${nbroot}/libs/external">
+                    <include name="xalan*.jar"/>
+                </fileset>
             </classpath>
         </javac>
     </target>
