--- a/core.ide/build.xml
+++ b/core.ide/build.xml
@@ -23,8 +23,6 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
-    <property name="binroot" location="../../../nbextra"/>
-    <property name="xml-apis" value="xml-apis.jar"/>
 
     <target name="compile">
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
@@ -33,8 +31,10 @@ Microsystems, Inc. All Rights Reserved.
                 <fileset dir="../../openide/netbeans/lib">
                     <include name="openide*.jar" />
                 </fileset>
-				<pathelement location="../netbeans/lib/core.jar"/>
-                <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
+                <pathelement location="../netbeans/lib/core.jar"/>
+                <fileset dir="../external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
             </classpath>
         </javac>
     </target>
