--- a/extbrowser/webclient/build.xml
+++ b/extbrowser/webclient/build.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='ISO-8859-1' ?>
+<?xml version="1.0" encoding="UTF-8"?> <!-- -*- sgml-indent-step: 2 -*- -->
 <!--
                 Sun Public License Notice
 
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -18,7 +18,6 @@ Microsystems, Inc. All Rights Reserved.
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" location="../../nbbuild/standard-nbm-license.txt"/>
   <property name="nb_root" location="../.."/>
-  <property name="binroot" location="../../../nbextra"/>
   <property name="nbm_alias" value="nb_ide"/>
 
   <property name="webclientlib" location="C:\Program Files\mozilla.org\M099\javadev\lib\webclient_1_2_win32.jar"/>
@@ -36,10 +35,11 @@ Microsystems, Inc. All Rights Reserved.
           <include name="openide*.jar" />
         </fileset>
         <pathelement location="${webclientlib}"/>
-        <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
-        <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/>
+        <fileset dir="${nb_root}/httpserver/external">
+          <include name="webserver*.jar"/>
+          <include name="servlet-2.2.jar"/>
+        </fileset>
         <pathelement location="${nb_root}/httpserver/netbeans/modules/httpserver.jar"/>
-        <!--<pathelement location="${binroot}/extbrowser/webclient/release/lib/ext/dom2.jar"/>-->
       </classpath>
     </javac>
   </target>
