--- a/httpserver/build.xml
+++ b/httpserver/build.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='ISO-8859-1' ?>
+<?xml version="1.0" encoding="UTF-8"?> <!-- -*- sgml-indent-step: 2 -*- -->
 <!--
                 Sun Public License Notice
 
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -23,18 +23,23 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
 
-  <property name="binroot" location="../../nbextra"/>
+  <target name="init">
+    <ant dir="external" target="unscramble"/>
+    <path id="httpserver-cp">
+      <pathelement location="../openide/openide-13javac-workaround.jar"/>
+      <fileset dir="../openide/netbeans/lib">
+        <include name="openide*.jar" />
+      </fileset>
+      <fileset dir="external">
+        <include name="webserver*.jar"/>
+        <include name="servlet-2.2.jar"/>
+      </fileset>
+    </path>
+  </target>
 
-  <target name="compile">
+  <target name="compile" depends="init">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
-      <classpath>
-	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <fileset dir="../openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-        <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
-        <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/>
-      </classpath>
+      <classpath refid="httpserver-cp"/>
     </javac>
   </target>
 
@@ -55,13 +60,16 @@ Microsystems, Inc. All Rights Reserved.
     <genlist targetname="nbm" outputfiledir="../nbbuild/netbeans"/>
   </target>
 
-  <target name="release">
+  <target name="release" depends="init">
     <mkdir dir="release"/>
     <copy todir="netbeans" includeEmptyDirs="false">
       <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
     </copy>
-    <copy todir="netbeans">
-      <fileset dir="${binroot}/httpserver/release"/>
+    <mkdir dir="netbeans/modules/ext"/>
+    <copy todir="netbeans/modules/ext">
+      <fileset dir="external">
+        <include name="webserver*.jar"/>
+      </fileset>
     </copy>
   </target>
 
@@ -71,7 +79,12 @@ Microsystems, Inc. All Rights Reserved.
              module="netbeans/modules/httpserver.jar"
 	     homepage="http://httpserver.${homepage.base}/"
 	     distribution="http://${dist.base}/httpserver.nbm">
-      <license file="${license.file}"/>
+      <license name="httpserver-module-license.txt">
+        <text>For the httpserver integration module:</text>
+        <file location="${license.file}"/>
+        <text>For the actual webserver:</text>
+        <file location="../nbbuild/external/apache-license.txt"/>
+      </license>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
   </target>
@@ -113,17 +126,8 @@ Microsystems, Inc. All Rights Reserved.
       <sourcepath>
         <pathelement location="src"/>
       </sourcepath>
-      <classpath>
-	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <fileset dir="../openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-        <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
-        <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/>
-      </classpath>
+      <classpath refid="httpserver-cp"/>
     </javadoc>    
   </target>
 
 </project>
-
-
