--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -22,20 +22,23 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../../nbbuild/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
-    <property name="binroot" location="../../../nbextra"/>
     <property name="nbroot" location="../.."/>
-    <property name="xml-apis" value="xml-apis.jar"/>
 
-    <target name="compile">
+    <target name="init">
+        <ant dir="../external" target="unscramble"/>
+    </target>
+
+    <target name="compile" depends="init">
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>
                 <pathelement location="../../openide/openide-13javac-workaround.jar"/>
                 <fileset dir="../../openide/netbeans/lib">
                     <include name="openide*.jar" />
                 </fileset>
-                <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
-                <pathelement location="${binroot}/core/release/lib/ext/${xml-apis}"/>
-                <pathelement location="${binroot}/core/release/lib/ext/jh.jar"/>
+                <fileset dir="../external">
+                    <include name="xml-apis*.jar"/>
+                    <include name="jh*.jar"/>
+                </fileset>
             </classpath>
         </javac>
     </target>
@@ -53,9 +56,13 @@ Microsystems, Inc. All Rights Reserved.
         </locjar>
     </target>
 
-    <target name="release">
+    <target name="release" depends="init">
         <mkdir dir="netbeans/modules/autoload/ext"/>
-        <copy file="${binroot}/core/release/lib/ext/jh.jar" tofile="netbeans/modules/autoload/ext/jh-1.1.2_02.jar"/>
+        <copy todir="netbeans/modules/autoload/ext">
+            <fileset dir="../external">
+                <include name="jh*.jar"/>
+            </fileset>
+        </copy>
     </target>
 
     <target name="netbeans" depends="jars,release">
@@ -72,7 +79,7 @@ Microsystems, Inc. All Rights Reserved.
                 <text>For the JavaHelp integration module itself:</text>
                 <file location="${license.file}"/>
                 <text>For the bundled JavaHelp runtime library:</text>
-                <file location="javahelp-license.txt"/>
+                <file location="../../nbbuild/external/javahelp-license.txt"/>
             </license>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
@@ -81,7 +88,11 @@ Microsystems, Inc. All Rights Reserved.
     <target name="test-build" depends="jars">
         <mkdir dir="reload/ext"/>
         <copy file="netbeans/modules/autoload/javahelp-api.jar" tofile="reload/javahelp-api.jar"/>
-        <copy file="${binroot}/core/release/lib/ext/jh.jar" tofile="reload/ext/jh-1.1.2_02.jar"/>
+        <copy todir="reload/ext">
+            <fileset dir="../external">
+                <include name="jh*.jar"/>
+            </fileset>
+        </copy>
     </target>
     <target name="test" depends="test-build">
         <nbinstaller module="reload/javahelp-api.jar" action="reinstall"/>
@@ -140,7 +151,9 @@ Microsystems, Inc. All Rights Reserved.
         <fileset dir="${nbroot}/openide/netbeans/lib">
           <include name="openide*.jar" />
         </fileset>
-        <pathelement location="${binroot}/core/release/lib/ext/jh.jar"/>
+        <fileset dir="../external">
+          <include name="jh*.jar"/>
+        </fileset>
       </classpath>
       <link href="${jdk-docs-location}"
             offline="true"
@@ -153,6 +166,5 @@ Microsystems, Inc. All Rights Reserved.
     </javadoc>
     <zip zipfile="JavaHelpAPIs.zip" basedir="JavaHelpAPIs"/>
   </target>
-
 
 </project>
