--- a/junit/test/function/src/build.xml
+++ b/junit/test/function/src/build.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir=".." default="netbeans" name="MyModule_test">
+<!--
+                Sun Public License Notice
 
-    <property name="binroot" value="../../.." />
+The contents of this file are subject to the Sun Public License
+Version 1.0 (the "License"). You may not use this file except in
+compliance with the License. A copy of the License is available at
+http://www.sun.com/
+
+The Original Code is NetBeans. The Initial Developer of the Original
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Microsystems, Inc. All Rights Reserved.
+-->
+<project basedir=".." default="netbeans" name="MyModule_test">
 
     <property name="xtest.home" value="../../../xtest" />
     <property name="netbeans.test.home" value="${netbeans.home}" />
@@ -56,7 +66,9 @@
                 </fileset>
                 <pathelement location="../../../java/netbeans/modules/java.jar"/>
                 <pathelement location="${xtest.home}/lib/xtest.jar"/>
-                <pathelement location="${binroot}/core/release/lib/ext/junit.jar"/>
+                <fileset dir="../../../external">
+                    <include name="junit*.jar"/>
+                </fileset>
             </classpath>
         </javac>
     </target>
