--- a/lexer/build.xml
+++ b/lexer/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -18,7 +18,6 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="binroot" location="../../nbextra"/>
   <property name="nbroot" location=".."/>
   <!-- <property name="build.compiler.debug" value="on"/> -->
 
@@ -26,8 +25,7 @@ Microsystems, Inc. All Rights Reserved.
   <!-- <property name="src.openide.util" value="org/netbeans/modules/lexer/lang/LookupLanguageProvider.java"/> -->
   <!-- <property name="src.antlr" value="org/netbeans/modules/lexer/antlr/**/*.java"/> -->
 
-  <!-- antlr.jar and XML parser jar (must include jaxp) -->
-  <property name="xmlparser" value="${binroot}/core/release/lib/ext/xerces.jar"/>
+  <!-- antlr.jar -->
   <!-- <property name="antlr" value="${binroot}/lexer/release/modules/ext/antlr.jar"/> -->
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
@@ -41,8 +39,9 @@ Microsystems, Inc. All Rights Reserved.
            deprecation="${build.compiler.deprecation}"
            debug="${build.compiler.debug}">
       <classpath>
-        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
-        <pathelement location="${xmlparser}"/>
+        <fileset dir="../core/external">
+          <include name="xml-apis*.jar"/>
+        </fileset>
         <pathelement location="tmp"/>
       </classpath>
     </javac>
