--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -16,7 +16,6 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
 
 <project name="ant" default="netbeans" basedir=".">
 
-  <property name="binroot" location="../../nbextra"/>
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
@@ -27,19 +26,24 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
 
-  <target name="compile">
+  <target name="init">
+    <ant dir="external" target="unscramble"/>
+  </target>
+
+  <target name="compile" depends="init">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
         <pathelement location="../openide/openide-13javac-workaround.jar"/>
         <fileset dir="../openide/netbeans/lib">
           <include name="openide*.jar" />
         </fileset>
-        <fileset dir="${binroot}/ant/release/modules/ext">
-          <include name="ant.jar"/>
+        <fileset dir="external">
           <include name="ant-1.*.jar"/>
         </fileset>
-        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
-	<pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
+        <fileset dir="../core/external">
+          <include name="xml-apis*.jar"/>
+          <include name="xerces*.jar"/>
+        </fileset>
         <pathelement location="../core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
       </classpath>
     </javac>
@@ -58,10 +62,15 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
     </locjar>
   </target>
 
-  <target name="release">
+  <target name="release" depends="init">
     <copy todir="netbeans" includeEmptyDirs="false">
       <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
-      <fileset dir="${binroot}/ant/release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
+    </copy>
+    <mkdir dir="netbeans/modules/ext"/>
+    <copy todir="netbeans/modules/ext">
+      <fileset dir="external">
+        <include name="ant*.jar"/>
+      </fileset>
     </copy>
   </target>
 
@@ -79,7 +88,7 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
         <text>For the Ant module itself:</text>
         <file location="${license.file}"/>
 	<text>For the Ant runtime:</text>
-	<file location="Ant_License"/>
+	<file location="../nbbuild/external/apache-license.txt"/>
       </license>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
@@ -91,8 +100,8 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <jar jarfile="reload/ant.jar" manifest="manifest-subst.mf" compress="false">
       <fileset dir="src" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
-      <zipfileset src="${binroot}/ant/release/modules/ext/ant-1.4.1.jar" excludes="META-INF/MANIFEST.MF"/>
-      <zipfileset src="${binroot}/ant/release/modules/ext/ant-optional-1.4.1.jar" excludes="META-INF/MANIFEST.MF"/>
+      <zipfileset src="external/ant-1.4.1.jar" excludes="META-INF/MANIFEST.MF"/>
+      <zipfileset src="external/ant-optional-1.4.1.jar" excludes="META-INF/MANIFEST.MF"/>
     </jar>
   </target>
   <target name="test" depends="test-build" description="Test module inside running IDE.">
@@ -186,8 +195,10 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
         <pathelement location="${useful-sources}"/>
       </sourcepath>
       <classpath>
-        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
-        <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
+        <fileset dir="../core/external">
+          <include name="xml-apis*.jar"/>
+          <include name="xerces*.jar"/>
+        </fileset>
       </classpath>
     </javadoc>
     <delete file="${ant-api.zip}"/>
@@ -217,18 +228,18 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
     </copy>
     <move file="${online-manual}/install.html" tofile="${online-manual}/libdeps.html"/>
     <property name="libdeps.html" location="${online-manual}/libdeps.html"/>
-    <property name="ant-docs.zip" location="${binroot}/ant/ant-docs.zip"/>
+    <property name="ant-docs.zip" location="external/ant-docs-${release-version}.zip"/>
     <property name="here" location="."/>
     <property name="ParserDB" location="docs/release/system/ParserDB"/>
     <property name="features.xml" location="www/plans/features.xml"/>
-    <property name="ant.jar" location="${binroot}/ant/release/modules/ext/ant.jar"/>
-    <property name="ant-optional.jar" location="${binroot}/ant/release/modules/ext/ant-optional.jar"/>
+    <property name="ant.jar" location="external/ant-${release-version}.jar"/>
+    <property name="ant-optional.jar" location="external/ant-optional-${release-version}.jar"/>
     <echo>Now some (currently) manual steps for you:
 4.  Edit ${libdeps.html}:
     - remove everything but Library Dependencies
     - libraries are needed not in classpath, but NBINSTALL/modules/patches/org-apache-tools-ant-module/
     - Jakarta regexp is already available in the IDE by default
-5.  Recreate ${ant-docs.zip} from the contents of ${online-manual}
+5.  Recreate ${ant-docs.zip}.master from the contents of ${online-manual}
 6.  Ensure these files in ${here} match the actual contents of ${online-manual}:
     - docs/javahelp/org/apache/tools/ant/module/docs/TOC.toc
     - docs/javahelp/org/apache/tools/ant/module/docs/Map.jhm
@@ -242,8 +253,9 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
 8.  Update ${ParserDB} with sources from ${useful-sources}
 9.  Update ${features.xml}
 10. Refresh these files with the prebuilt binaries from an Ant download:
-    - ${ant.jar}
-    - ${ant-optional.jar}
+    - ${ant.jar}.master
+    - ${ant-optional.jar}.master
+    (and scramble them by running 'scramble in external/build.xml)
 11. Test everything
 12. Submit a patch for cvs://cvs.apache.org/jakarta-ant/xdocs/external.xml
     mentioning that the bundled version in NB is now ${release-version}.
