--- a/servletapi/build.xml
+++ b/servletapi/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?> <!-- -*- sgml-indent-step: 2 -*- -->
 <!--
                 Sun Public License Notice
 
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -19,28 +19,16 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
 
   <property name="nb_root" location="../.."/>
-  <property name="binroot" location="../../../nbextra"/>
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
-  <property name="license.file" value="${nb_root}/nbbuild/bcl-license.txt"/>
+  <property name="license.file" value="${nb_root}/nbbuild/standard-nbm-license.txt"/>
   <property name="nbm_alias" value="nb_ide"/>
-  <property name="storepass" value="?"/>
 
-  <target name="compile">
-  <!-- Actually not neceseary
-    <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
-      <include name="org/netbeans/modules/servletapi/"/>
-      <classpath>
-        <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
-        <fileset dir="${nb_root}/openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-      </classpath>
-    </javac>
-  -->
+  <target name="init">
+    <ant dir="../external" target="unscramble"/>
   </target>
 
-  <target name="jars" depends="compile">
+  <target name="jars">
     <mkdir dir="netbeans/modules/autoload"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
@@ -54,16 +42,13 @@ Microsystems, Inc. All Rights Reserved.
     </locjar>
   </target>
 
-  <target name="release">
+  <target name="release" depends="init">
     <mkdir dir="netbeans/modules/autoload/ext"/>
-    <copy file="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"
+    <copy file="../external/servlet-2.2.jar"
           tofile="netbeans/modules/autoload/ext/servlet-2.2.jar"/>
   </target>
 
-  <target name="javahelp">
-  </target>
-
-  <target name="netbeans" depends="jars,release,javahelp" description="Builds the module">
+  <target name="netbeans" depends="jars,release" description="Builds the module">
     <genlist targetname="nbm" outputfiledir="${nb_root}/nbbuild/netbeans"/>
   </target>
 
@@ -73,7 +58,12 @@ Microsystems, Inc. All Rights Reserved.
            module="netbeans/modules/autoload/servletapi.jar"
            homepage="http://httpserver.${homepage.base}/"
            distribution="http://${dist.base}/servletapi.nbm">
-      <license file="${license.file}"/>
+      <license name="servletapi-license.txt">
+        <text>For the integration module:</text>
+        <file location="${license.file}"/>
+        <text>For the Servlet API:</text>
+        <file location="../external/servlet-2.2-license.txt"/>
+      </license>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
   </target>
