--- a/web.jspparser/build.xml
+++ b/web.jspparser/build.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='ISO-8859-1' ?>
+<?xml version="1.0" encoding="UTF-8"?> <!-- -*- sgml-indent-step: 2 -*- -->
 <!--
                 Sun Public License Notice
 
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -19,34 +19,31 @@ Microsystems, Inc. All Rights Reserved.
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../../nbbuild/nbantext.jar"/>
 
   <property name="nb_root" location="../.."/>
-  <property name="binroot" location="../../../nbextra"/>
   <property name="core_root" location="../core"/>
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../../nbbuild/standard-nbm-license.txt"/>
   <property name="nbm_alias" value="nb_ide"/>
-  <property name="storepass" value="?"/>
 
-  <target name="web-core.compile">
-    <ant dir="${core_root}" target="compile"/>
+  <target name="init">
+    <ant dir="../external" target="unscramble"/>
   </target>
 
-  <target name="compile" depends="web-core.compile">
+  <target name="compile" depends="init">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <include name="org/netbeans/modules/web/jspparser/"/>
       <classpath>
         <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${binroot}/core/release/lib/ext/jaxp.jar"/>
-        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
+        <fileset dir="${nb_root}/core/external">
+          <include name="xml-apis*.jar"/>
+        </fileset>
         <pathelement location="${core_root}/src/"/>
-        <pathelement location="${binroot}/web/servletapi23/release/modules/ext/servlet-2.3.jar"/>
-        <pathelement location="${binroot}/web/jspparser/release/modules/ext/jasper-runtime.jar"/>
-        <pathelement location="${binroot}/web/jspparser/release/modules/ext/jasper-compiler.jar"/>
+        <fileset dir="../external">
+          <include name="*.jar"/>
+        </fileset>
         <fileset dir="${nb_root}/openide/netbeans/lib">
           <include name="openide*.jar" />
         </fileset>
-        <!-- Hopefully set up by nbbuild/build.xml: -->
-        <pathelement location="${jdkhome}/lib/tools.jar"/>
       </classpath>
     </javac>
   </target>
@@ -67,17 +64,17 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="release">
     <mkdir dir="netbeans/modules/eager/ext"/>
-    <copy file="${binroot}/web/jspparser/release/modules/ext/jasper-compiler.jar"
-          tofile="netbeans/modules/eager/ext/jasper-compiler.jar"/>
-    <copy file="${binroot}/web/jspparser/release/modules/ext/jasper-runtime.jar"
-          tofile="netbeans/modules/eager/ext/jasper-runtime.jar"/>
+    <copy todir="netbeans/modules/eager/ext">
+      <fileset dir="../external">
+        <include name="jasper-*.jar"/>
+      </fileset>
+    </copy>
   </target>
 
   <target name="netbeans" depends="jars,release">
     <genlist targetname="nbm" outputfiledir="${nb_root}/nbbuild/netbeans"/>
   </target>
 
-  <!-- Complicated: actually two NBMs must be made. -->
   <target name="nbm" depends="netbeans">
     <delete dir="Info"/>
     <makenbm file="web-jspparser.nbm"
@@ -85,7 +82,12 @@ Microsystems, Inc. All Rights Reserved.
              module="netbeans/modules/eager/jsp-parser.jar"
 	     homepage="http://web.${homepage.base}/"
 	     distribution="http://${dist.base}/web-jspparser.nbm">
-      <license file="${license.file}"/>
+      <license name="jspparser-license.txt">
+        <text>For the JSP Parser module:</text>
+        <file location="${license.file}"/>
+        <text>For the Jasper compiler and runtime:</text>
+        <file location="${nb_root}/nbbuild/external/apache-license.txt"/>
+      </license>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
   </target>
@@ -109,8 +111,8 @@ Microsystems, Inc. All Rights Reserved.
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <jar jarfile="reload/jsp-parser.jar" manifest="manifest-subst.mf" compress="false">
       <fileset dir="src" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
-      <zipfileset src="${binroot}/web/jspparser/release/modules/ext/jasper-compiler.jar" excludes="META-INF/MANIFEST.MF"/>
-      <zipfileset src="${binroot}/web/jspparser/release/modules/ext/jasper-runtime.jar" excludes="META-INF/MANIFEST.MF"/>
+      <zipfileset src="../external/jasper-compiler-4.0.4.jar" excludes="META-INF/MANIFEST.MF"/>
+      <zipfileset src="../external/jasper-runtime-4.0.4.jar" excludes="META-INF/MANIFEST.MF"/>
     </jar>
   </target>
   <!-- This target will only work *inside* the IDE! -->
